# memsown

./: Cargo.toml  backer.json  backer.toml
benches/: bench_gallery_files.rs
decisions.doc/: 0000-adr.md  0001-rust-and-desktop-gui.md  0002-sqlite.md
res/fontello/: config.json  demo.html
res/fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
res/fontello/font/: fontello.eot
src/: config.rs  db.rs  gui.rs  imaging.rs  interlude.rs  lib.rs  main.rs  model.rs  pathwalk.rs  res.rs  scanning.rs
src/db/: iter.rs  typed_query.rs
src/widgets/: gallery.rs  mod.rs  tags.rs
