[package]
name = "backer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
globwalk = "0.8.1"
iced = "0.3"
image = { version = "0.23", default-features = false, features = ["jpeg_rayon"] }
kamadak-exif = "0.5"
path-slash = "0.1"
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"
