[package]
name = "backer"
default-run = "backer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
#iced = { version = "0.3", features = ["image"] }
iced = { git = "https://github.com/iced-rs/iced", rev = "569aff3", features = ["image"] }
ifmt = "0.3.3"
image = { version = "0.23", default-features = false, features = ["jpeg_rayon"] }
kamadak-exif = "0.5"
path-slash = "0.1"
rayon = "1.5"
regex = "1.5"
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
sha-1 = "0.9"
thiserror = "1.0"
toml = "0.5"
walkdir = "2.3"
# Required for defining custom widgets
iced_native = { git = "https://github.com/iced-rs/iced", rev = "569aff3" }
iced_graphics = { git = "https://github.com/iced-rs/iced", rev = "569aff3" }
#iced_wgpu = "0.4.0"
iced_wgpu = { git = "https://github.com/iced-rs/iced", rev = "569aff3" }

