[package]
name = "backer"
default-run = "backer"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dev-dependencies]
# criterion = "0.5"
tempfile = "3.8"

# [[bench]]
# # Builtin benchmark harness is nightly-only at the time of writing, so we
# # use `criterion` crate, which then requires disabling the builtin
# # harness.
# name = "bench_gallery_files"
# harness = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
derivative = "2.2"
iced = { version = "0.4", features = ["image", "pure"] }
ifmt = "0.3.3"
image = { version = "0.23", default-features = false, features = ["jpeg_rayon"] }
itertools = "0.10"
kamadak-exif = "0.5"
path-slash = "0.1"
rayon = "1.5"
regex = "1.5"
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
sha-1 = "0.9"
thiserror = "1.0"
toml = "0.5"
walkdir = "2.3"
# Required for defining custom widgets
iced_native = "0.5"
iced_graphics = "0.3"
iced_wgpu = "0.5"
iced_lazy = { version = "0.1", features = ["pure"] }
iced_pure = "0.2"
# Profiling
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
winmtp = "0.2"

